# cricapi-ipl-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
cricapi_ipl/: __init__.py  apis.py  config.py  hitinfo.py  match.py  modules.py  series.py  team.py  venue.py
tests/: test_get_series_list.py  test_innings.py  test_match.py  test_set_api_key.py  test_team.py  test_venue.py
