[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricapi_ipl"
version = "0.1.0"
description = "A simple example Python package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Sanket Chitagopkar", email = "sanket.tronics@gmail.com"}
]
dependencies = [
    "requests"
]

[tool.setuptools.packages.find]
where = ["cricapi_ipl"]