[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricapi_ipl"
version = "1.0.0"
description = "Python wrapper for getting IPL match details"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]
authors = [
    {name = "Sanket Chitagopkar", email = "sanket.tronics@gmail.com"}
]
dependencies = [
    "requests",
]
[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["cricapi_ipl"]